--- a/app/src/main/res/layout-sw600dp/activity_grid_view.xml
+++ b/app/src/main/res/layout-sw600dp/activity_grid_view.xml
@@ -8,5 +8,5 @@
     android:horizontalSpacing="10dp"
     android:stretchMode="columnWidth"
     android:gravity="center"
-    android:numColumns="auto_fit"
+    android:numColumns="4"
     android:background="#E8EAF6"/>
