--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,13 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.navyas.android.tagimage.MainActivity">
 
+    <!-- For Debugging
     <item
         android:id="@+id/action_delete"
         android:orderInCategory="3"
         android:title="@string/action_delete"
         app:showAsAction="never"
         android:background="#E8EAF6"
-        />
+        />-->
     <item
         android:id="@+id/action_resync"
         android:orderInCategory="1"
